Isaiah personal post

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -32,9 +32,9 @@
       </li>
       {% else %} {% endif %}
 
-       {% if site.twitter %}
+       {%  if site.linkedin %}
       <li class="social-profiles-item">
-        <a href="{{ site.twitter }}" class="social-profiles-link"><i class="ion ion-logo-twitter"></i></a>
+        <a href="{{ site.linkedin }}" class="social-profiles-link"><i class="ion ion-logo-linkedin"></i></a>
       </li>
       {% else %} {% endif %}
 
